wp-content/themes/delivering-happiness/assets/sass/global/_components.scss
/* ... */
.paging-navigation a{
    margin: 0;

}

.post-navigation {
    .nav-previous {
        float: left !important;
    }
    .nav-next {
        float: right !important;
    }
}

.gform_confirmation_message,
.validation_message,
.validation_error {
    font-size: 12px;
    padding: 10px 0;
    color: red;
    line-height: normal;
}

.gform_confirmation_message {
    color: green;
}

.flare {
    top: 140px !important;
}

.modal-box {
    @include border_radius(10px);
    @include absolute-valing($pos: fixed, $width: 650px, $height: 600px, $ptop: 50%);
    border: 5px solid #666666;
    background: white;
    z-index: 999999;
    padding: 30px;
    text-align: center;
    .gform_wrapper {
        .gfield_label {
            display: none;
        }
        .ginput_container input {
            width: 226px;
            line-height: 16px;
            display: block;
            margin: 0px auto;
            margin-bottom: 10px;
        }
        .button {
            padding: 9px 29px !important;
            position: static !important;
            cursor: pointer;
            background-color: rgba($ModerateViolet, 0.3) !important;
            border-color: $ModerateViolet !important;
            color: $ModerateViolet !important;
            margin-top: 15px;
            margin-bottom: 20px;
            &:hover {
                background-color: rgba($ModerateViolet, 0.5) !important;
            }
        }
        .validation_error{
            padding: 0;
            margin-top: -5px;
            margin-bottom: 10px;
        }
    }
    a{
        color: $Blue;
    }
    .close {
        color: $Blue;
        text-decoration: underline;
        cursor: pointer;
    }
}

.faded {
    display: none;
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    z-index: 99999;
}
sup {
    font-size: 16px;
    position: relative;
    top: -18px;
}

